syntax = "proto3";

package  api.v1;

option go_package = "internal/grpc/pb";


service Posts {
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse) {}
  rpc GetPosts(GetPostsRequest) returns (GetPostsResponse) {}
}

message GetPostsRequest {
  int64 userId = 1;
}

message Post {
  int64 id = 1;
  string title = 2;
  string message = 3;
}

message GetPostsResponse {
  repeated Post posts= 1;
}

message CreatePostRequest {
  string title = 1;
  string message = 2;
  int64 userId = 3;
}

message CreatePostResponse {
  int64 id = 1;
  string title = 2;
  string message = 3;
  int64 userId = 4;
}